refactor(board): feedback03 - 매직넘버 포장, 코드 과다