@@ -1,16 +1,31 @@
 package janggi.domain.board;
 
+import static janggi.domain.board.Position.BOARD_MAX_COLUMN;
+import static janggi.domain.board.Position.BOARD_MIN_COLUMN;
+
 import janggi.domain.game.Side;
 import janggi.domain.piece.Piece;
 import janggi.domain.piece.PieceType;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
+import java.util.concurrent.atomic.AtomicInteger;
 
 public enum InitialBoardInfo {
     HAN(Side.HAN, 0, 1, 2, 3, PieceType.HAN_SOLDIER),
     CHO(Side.CHO, 9, 8, 7, 6, PieceType.CHO_SOLDIER),
     ;
+
+    private static final int SOLDIER_COUNT = 5;
+    private static final int MAJOR_PIECE_COUNT = 2;
+    private static final int SOLDIER_TERM = 2;
+    private static final int PALACE_COLUMN = 4;
+    private static final List<Integer> CHARIOT_COLUMN = List.of(0, 8);
+    private static final List<Integer> ELEPHANT_COLUMN = List.of(1, 7);
+    private static final List<Integer> HORSE_COLUMN = List.of(2, 6);
+    private static final List<Integer> GUARD_COLUMN = List.of(3, 5);
+    private static final List<Integer> CANNON_COLUMN = List.of(1, 7);
+
 
     final Side side;
     final int bottomRow;
@@ -29,40 +44,60 @@ public enum InitialBoardInfo {
     }
 
     public Map<Position, Piece> generateInitialPiecePositions() {
-        Map<Position, Piece> initialPiecePositions = new HashMap<>();
-        initialPiecePositions.putAll(initMajorPieces());
-        initialPiecePositions.putAll(initPalaceAndCannons());
-        initialPiecePositions.putAll(initSoldiers());
-        return Collections.unmodifiableMap(initialPiecePositions);
+        Map<Position, Piece> initialBoard = new HashMap<>();
+        initSoldiers(initialBoard);
+        initCannon(initialBoard);
+        initChariot(initialBoard);
+        initElephant(initialBoard);
+        initHorse(initialBoard);
+        initGuard(initialBoard);
+        initPalace(initialBoard);
+        return Map.copyOf(initialBoard);
     }
 
-    private Map<Position, Piece> initMajorPieces() {
-        Map<Position, Piece> majorPieces = new HashMap<>();
-        putPiece(majorPieces, bottomRow, 0, PieceType.CHARIOT, "0");
-        putPiece(majorPieces, bottomRow, 8, PieceType.CHARIOT, "1");
-        putPiece(majorPieces, bottomRow, 1, PieceType.ELEPHANT, "0");
-        putPiece(majorPieces, bottomRow, 7, PieceType.ELEPHANT, "1");
-        putPiece(majorPieces, bottomRow, 2, PieceType.HORSE, "0");
-        putPiece(majorPieces, bottomRow, 6, PieceType.HORSE, "1");
-        putPiece(majorPieces, bottomRow, 3, PieceType.GUARD, "0");
-        putPiece(majorPieces, bottomRow, 5, PieceType.GUARD, "1");
-        return majorPieces;
-    }
-
-    private Map<Position, Piece> initPalaceAndCannons() {
-        Map<Position, Piece> palaceAndCannons = new HashMap<>();
-        putPiece(palaceAndCannons, palaceRow, 4, PieceType.PALACE, "0");
-        putPiece(palaceAndCannons, cannonRow, 1, PieceType.CANNON, "0");
-        putPiece(palaceAndCannons, cannonRow, 7, PieceType.CANNON, "1");
-        return palaceAndCannons;
-    }
-
-    private Map<Position, Piece> initSoldiers() {
-        Map<Position, Piece> soldiers = new HashMap<>();
-        for (int i = 0; i < 5; i++) {
-            putPiece(soldiers, soldierRow, i * 2, this.soldierType, String.valueOf(i));
+    private void initSoldiers(Map<Position, Piece> initialBoard) {
+        for (int soldierColumn = BOARD_MIN_COLUMN; soldierColumn <= BOARD_MAX_COLUMN; soldierColumn += SOLDIER_TERM) {
+            putPiece(initialBoard, soldierRow, soldierColumn, this.soldierType,
+                    String.valueOf(soldierColumn / SOLDIER_TERM));
         }
-        return soldiers;
+    }
+
+    private void initCannon(Map<Position, Piece> initialBoard) {
+        AtomicInteger pieceCount = new AtomicInteger();
+        CANNON_COLUMN
+                .forEach(cannonColumn -> {
+                    putPiece(initialBoard, cannonRow, cannonColumn, PieceType.CANNON, String.valueOf(pieceCount.get()));
+                    pieceCount.addAndGet(1);
+                });
+        for (int count = 0; count < MAJOR_PIECE_COUNT; count++) {
+
+        }
+
+        putPiece(initialBoard, cannonRow, 7, PieceType.CANNON, "1");
+    }
+
+    private void initChariot(Map<Position, Piece> initialBoard) {
+        putPiece(initialBoard, bottomRow, 0, PieceType.CHARIOT, "0");
+        putPiece(initialBoard, bottomRow, 8, PieceType.CHARIOT, "1");
+    }
+
+    private void initPalace(Map<Position, Piece> initialBoard) {
+        putPiece(initialBoard, palaceRow, 4, PieceType.PALACE, "0");
+    }
+
+    private void initElephant(Map<Position, Piece> initialBoard) {
+        putPiece(initialBoard, bottomRow, 1, PieceType.ELEPHANT, "0");
+        putPiece(initialBoard, bottomRow, 7, PieceType.ELEPHANT, "1");
+    }
+
+    private void initHorse(Map<Position, Piece> initialBoard) {
+        putPiece(initialBoard, bottomRow, 2, PieceType.HORSE, "0");
+        putPiece(initialBoard, bottomRow, 6, PieceType.HORSE, "1");
+    }
+
+    private void initGuard(Map<Position, Piece> initialBoard) {
+        putPiece(initialBoard, bottomRow, 3, PieceType.GUARD, "0");
+        putPiece(initialBoard, bottomRow, 5, PieceType.GUARD, "1");
     }
 
     private void putPiece(Map<Position, Piece> targetMap, int row, int column, PieceType type, String number) {
